Creating button to log in on landing page.

--- a/html/footer.html
+++ b/html/footer.html
@@ -1,4 +1,4 @@
 <div class="container">
     &#169; K. Abaraoha<br>
-    Unless otherwise stated, contents licensed under Creative Commons BY-NC-ND license.
+    Unless otherwise stated, contents licensed under Creative Commons BY license.
 </div>
