--- a/html/index.html
+++ b/html/index.html
@@ -18,55 +18,52 @@
     <!-- Firebase -->
     <script src="https://cdn.firebase.com/js/client/2.2.1/firebase.js"></script>
 
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <!-- <script src="js/bootstrap.min.js"></script> -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+
   </head>
   <body>
-  <!-- <div class="container theme-showcase" role="main"> -->
     <div class="container">
-    <div class="header clearfix">
-      <h4 class="text-muted">Tabletop Sabermetrics</h4>
-    </div>
-    <div class="jumbotron">
-        To get started, <strong>choose a campaign</strong> to view or record dice roll stats.
-        <br>
-        <br>
-        <br>
-        <button type="button" class="btn btn-lg btn-success" id="btnChooseCampaign">Choose a campaign</button>
+        <div class="header clearfix">
+          <h4 class="text-muted">Tabletop Sabermetrics</h4>
+        </div>
+        <div class="text-center">
+            <button type="button" class="btn btn-lg btn-warning" id="btnLogin">Log in with your Google account</button>
+        </div>
     </div>
 
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <!-- <script src="js/bootstrap.min.js"></script> -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-    </div>
+    <footer class="footer" id="footer-2016"></footer>
 
-    <footer class="footer" id="footer-2015">
-    </footer>
-
+    <!--OK doing this sync/inline for the landing/login page -->
     <script>
     var myDataRef = new Firebase("https://shining-torch-7755.firebaseio.com");
-    myDataRef.authWithOAuthRedirect("google", function(error, authData) {
-        if (error) {
-            console.log("[ERR] Auth failed: ", error);
-        } else {
-            console.log("Sucessfully logged in.");
-        }
+
+    jQuery(document).on("ready", function() {
+
+        jQuery(document).on("mousedown", "#btnLogin", function() {
+            myDataRef.authWithOAuthRedirect("google", function(error, authData) {
+                if (error) {
+                    console.log("[ERR] Auth failed: ", error);
+                } else {
+                    // Won't hit this code path as we'll redirect after successful login.
+                }
+            });
+        });
+
+        // Load footer contents
+        jQuery("#footer-2016").load("footer.html");
+
     });
-    
-    $("#btnChooseCampaign").click(function (e) {
-        window.location = "campaignList.html";
-    });
-    
-    // Load footer contents
-    $("#footer-2015").load("footer.html");
     </script>
   
-  </div>
   </body>
 </html>
