Putting site behind login. Updates to landing page to transition UI correctly based on login state.

--- a/html/footer.html
+++ b/html/footer.html
@@ -1,4 +1,3 @@
 <div class="container">
-    &#169; K. Abaraoha<br>
-    Unless otherwise stated, contents licensed under Creative Commons BY license.
+    &#169; 2016 K. Abaraoha. Unless otherwise stated, this site's content is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.
 </div>
