Swapping unneeded click handlers for buttons to links.

--- a/html/campaignList.html
+++ b/html/campaignList.html
@@ -58,7 +58,9 @@
         <br>
         <br>
         <p>
-        <button type="button" class="btn btn-xs btn-default" id="btnGoHome">Go home</button>
+        <a href="/">
+            <button type="button" class="btn btn-xs btn-default" id="btnGoHome">Go home</button>
+        </a>
 
         <div class="modal fade" id="addCampaign" tabindex="-1" role="dialog" aria-labelledby="addCampaignDialog">
                 <div class="modal-dialog" role="document">
